[package]
name = "k8s-metrics-collector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
k8s-metrics.workspace = true
k8s-metrics-ext.workspace = true
k8s-metrics-kubeapi.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }
kube.workspace = true
prometheus-parse.workspace = true
time.workspace = true


[lints]
workspace = true
