[package]
name = "k8s-metrics-ext"
description = "K8s metrics extension traits and utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
k8s-openapi.workspace = true
k8s-metrics.workspace = true


[lints]
workspace = true
